--- a/apps/frontend-admin/Dockerfile
+++ b/apps/frontend-admin/Dockerfile
@@ -1,35 +1,25 @@
-# Stage 1 : build
-FROM node:20-alpine AS build
+# syntax=docker/dockerfile:1
+ARG NODE_VERSION=24.12.0
 
-# Créer un utilisateur non root dans le container
-#RUN addgroup -S appgroup && adduser -S appuser -G appgroup
-#USER appuser
+###############
+# Build stage
+FROM node:${NODE_VERSION}-alpine AS build
+WORKDIR /usr/src/app
 
-WORKDIR /app
+COPY package.json package-lock.json ./
+RUN npm ci
 
-# Copier les fichiers package
-COPY package*.json ./
-
-# Installer les dépendances
-RUN npm install
-
-# Copier le reste du code
 COPY . .
-
-# Build production
 RUN npm run build
 
-# Stage 2 : production
 FROM nginx:alpine
 
-# Copier le build depuis le stage précédent
-COPY --from=build /app/dist /usr/share/nginx/html
+# Copy custom nginx configuration
+# COPY infra/nginx/stagging.conf /etc/nginx/conf.d/default.conf
 
-# Copier la config nginx custom (optionnel)
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Copy production build files
+COPY --from=build /usr/src/app/dist /usr/share/nginx/html/
 
-# Exposer le port 80
 EXPOSE 80
 
-# Lancer nginx
 CMD ["nginx", "-g", "daemon off;"]
