--- a/infra/docker/stagging/docker-compose.yaml
+++ b/infra/docker/stagging/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - ../../../.env.staging
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.api-staging.rule=Host(`api.staging.ouvrier.com`)'
+      - 'traefik.http.routers.api-staging.rule=Host(`api.staging.ouvrierpourtout.com`)'
       - 'traefik.http.routers.api-staging.entrypoints=websecure'
       - 'traefik.http.routers.api-staging.tls.certresolver=letsencrypt'
     restart: always
@@ -16,7 +16,7 @@ services:
     build: ../../../apps/frontend-admin
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.admin-staging.rule=Host(`admin.staging.ouvrier.com`)'
+      - 'traefik.http.routers.admin-staging.rule=Host(`admin.staging.ouvrierpourtout.com`)'
       - 'traefik.http.routers.admin-staging.entrypoints=websecure'
       - 'traefik.http.routers.admin-staging.tls.certresolver=letsencrypt'
     restart: always
@@ -25,7 +25,7 @@ services:
     build: ../../../apps/frontend-public
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.public-staging.rule=Host(`staging.ouvrier.com`)'
+      - 'traefik.http.routers.public-staging.rule=Host(`staging.ouvrierpourtout.com`)'
       - 'traefik.http.routers.public-staging.entrypoints=websecure'
       - 'traefik.http.routers.public-staging.tls.certresolver=letsencrypt'
     restart: always
