--- a/infra/docker/test/docker-compose.yaml
+++ b/infra/docker/test/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - ../../../.env.test
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.api-test.rule=Host(`api.test.ouvrier.com`)'
+      - 'traefik.http.routers.api-test.rule=Host(`api.test.ouvrierpourtout.com`)'
       - 'traefik.http.routers.api-test.entrypoints=websecure'
       - 'traefik.http.routers.api-test.tls.certresolver=letsencrypt'
     restart: always
@@ -16,7 +16,7 @@ services:
     build: ../../../apps/frontend-admin
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.admin-test.rule=Host(`admin.test.ouvrier.com`)'
+      - 'traefik.http.routers.admin-test.rule=Host(`admin.test.ouvrierpourtout.com`)'
       - 'traefik.http.routers.admin-test.entrypoints=websecure'
       - 'traefik.http.routers.admin-test.tls.certresolver=letsencrypt'
     restart: always
@@ -25,7 +25,7 @@ services:
     build: ../../../apps/frontend-public
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.public-test.rule=Host(`test.ouvrier.com`)'
+      - 'traefik.http.routers.public-test.rule=Host(`test.ouvrierpourtout.com`)'
       - 'traefik.http.routers.public-test.entrypoints=websecure'
       - 'traefik.http.routers.public-test.tls.certresolver=letsencrypt'
     restart: always
