--- a/apps/frontend-public/Dockerfile
+++ b/apps/frontend-public/Dockerfile
@@ -1,19 +1,27 @@
 ARG NODE_VERSION=24.12.0
 
+#----------------------------------------
+# PHASE DE BUILD
+#----------------------------------------
 FROM node:${NODE_VERSION}-alpine as build
 
-WORKDIR /usr/src/app
+WORKDIR /frontend_public
 
 COPY package.json package-lock.json ./
-RUN npm install --force
+RUN npm install --legacy-peer-deps
 
 COPY . .
 RUN npm run build
 
-
+#----------------------------------------
+# PHASE DE DEPLOYMENT EN STAGGING
+#----------------------------------------
 FROM nginx:alpine
 
-COPY --from=build /usr/src/app/dist /usr/share/nginx/html/
+COPY --from=build /frontend_public/build /usr/share/nginx/html/
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
+#---------------------------------------
+# END
+#---------------------------------------
