--- a/infra/nginx/prod.conf
+++ b/infra/nginx/prod.conf
@@ -1,25 +1,31 @@
 server {
+    listen 4000;
     server_name api.ouvrierpourtout.com;
 
     location / {
-        proxy_pass http://localhost:4000;
+        proxy_pass http://backend:4000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        include /etc/nginx/proxy_params;
     }
 }
 
 server {
+    listen 80;
     server_name admin.ouvrierpourtout.com;
 
     location / {
-        proxy_pass http://localhost:5173;
+        proxy_pass http://frontend-admin:8001;
+        include /etc/nginx/proxy_params;
     }
 }
 
 server {
+    listen 80;
     server_name ouvrierpourtout.com;
 
     location / {
-        proxy_pass http://localhost:3000;
+        proxy_pass http://frontend-public:8000;
+        include /etc/nginx/proxy_params;
     }
 }
