replace traefik en caddy

--- a/infra/docker/stagging/docker-compose.yaml
+++ b/infra/docker/stagging/docker-compose.yaml
@@ -1,25 +1,22 @@
 services:
-  traefik:
-    image: traefik:latest
-    container_name: traefik
-    command:
-      - '--api.insecure=true'
-      - '--providers.docker=true'
-      - '--entrypoints.web.address=:80'
-      - '--entrypoints.websecure.address=:443'
-      - '--providers.docker.exposedbydefault=false'
-      - '--certificatesresolvers.le.acme.email=info@ouvrierpourtout.com'
-      - '--certificatesresolvers.le.acme.storage=/letsencrypt/acme.json'
-      - '--certificatesresolvers.le.acme.httpchallenge.entrypoint=web'
+  caddy:
+    image: caddy:2.11-alpine
+    restart: unless-stopped
+    # cap_add:
+    #   - NET_ADMIN
     ports:
       - '80:80'
-      - '8080:8080'
+      - '443:443'
+      - '443:443/udp'
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./traefik/acme.json:/letsencrypt/acme.json
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      # - ./conf:/etc/caddy
+      # - ./site:/srv
+      - caddy_data:/data
+      - caddy_config:/config
     networks:
       - backend-network-ouvrier
-    restart: always
+      - frontend-network-ouvrier
 
   backend:
     container_name: backend
@@ -33,26 +30,18 @@ services:
       - PORT_PROD=4000
       - PORT_STAGGING=4001
       - PORT_TEST=4002
-      - API_URL_LOCAL="http://backend:4000"
-      - API_URL_STAGGING="http://192.162.71.169:4001"
-      - API_URL_TEST="http://192.162.71.169:4002"
-      - API_URL_PROD="http://192.162.71.169:4000"
-      - SECRET_TOKEN_ADMIN_LOGIN="aqwxszedcvbgfrt12^shsj@sjhjdkjjs"
-      - SECRET_TOKEN_PARTNER_LOGIN="abhdkskjkdjkjlks"
-      - GMAIL="konenonwa1998@gmail.com"
-      - GMAIL_PASSWORD="ibnw qeab yrmw prcs"
+      - API_URL_LOCAL=http://backend:4000
+      - API_URL_STAGGING=http://192.162.71.169:4001
+      - API_URL_TEST=http://192.162.71.169:4002
+      - API_URL_PROD=http://192.162.71.169:4000
+      - SECRET_TOKEN_ADMIN_LOGIN=aqwxszedcvbgfrt12^shsj@sjhjdkjjs
+      - SECRET_TOKEN_PARTNER_LOGIN=abhdkskjkdjkjlks
+      - GMAIL=konenonwa1998@gmail.com
+      - GMAIL_PASSWORD=ibnw qeab yrmw prcs
       - MONGODB_URL_ONLINE=mongodb://mongo:27017/db_ouvrier
-      - MONGODB_URL_LOCAL="mongodb://mongo:27017/db_ouvrier
-    env_file:
-      - ../../../apps/backend/.env
+      - MONGODB_URL_LOCAL=mongodb://mongo:27017/db_ouvrier
     depends_on:
       - mongo
-      - traefik
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.backend.rule=Host(`api.staging.ouvrierpourtout.com`)'
-      - 'traefik.http.routers.backend.entrypoints=websecure'
-      - 'traefik.http.routers.backend.tls.certresolver=letsencrypt'
     restart: always
     ports:
       - '4000:4000'
@@ -67,12 +56,6 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - backend
-      - traefik
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.frontend_admin.rule=Host(`admin.staging.ouvrierpourtout.com`)'
-      - 'traefik.http.routers.frontend_admin.entrypoints=websecure'
-      - 'traefik.http.routers.frontend_admin.tls.certresolver=letsencrypt'
     restart: always
     ports:
       - '8001:80'
@@ -86,12 +69,6 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - backend
-      - traefik
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.frontend_public.rule=Host(`staging.ouvrierpourtout.com`)'
-      - 'traefik.http.routers.frontend_public.entrypoints=websecure'
-      - 'traefik.http.routers.frontend_public.tls.certresolver=letsencrypt'
     restart: always
     ports:
       - '8000:80'
@@ -102,8 +79,6 @@ services:
     container_name: mongo
     image: mongo:latest
     restart: always
-    depends_on:
-      - traefik
     volumes:
       - mongo_staging:/data/db
     networks:
@@ -111,6 +86,8 @@ services:
 
 volumes:
   mongo_staging:
+  caddy_data:
+  caddy_config:
 
 networks:
   backend-network-ouvrier:
