--- a/infra/docker/stagging/Caddyfile
+++ b/infra/docker/stagging/Caddyfile
@@ -1,13 +1,15 @@
-api.ouvrierpourtout.com www.api.ouvrierpourtout.com {
-	reverse_proxy http://localhost:4000
+{
+    email info@ouvrierpourtout.com
 }
 
+api.ouvrierpourtout.com {
+    reverse_proxy backend:4000
+}
+
+admin.ouvrierpourtout.com {
+    reverse_proxy frontend-admin:80
+}
 
 ouvrierpourtout.com www.ouvrierpourtout.com {
-	reverse_proxy http://localhost:8000
-}
-
-
-admin.ouvrierpourtout.com www.admin.ouvrierpourtout.com {
-	reverse_proxy http://localhost:8001
+    reverse_proxy frontend-public:80
 }
